--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <h1>Nuestros Productos</h1>
 
     <div class="grid">
+
         <div class="producto">
+
             <a href="producto.html">
                 <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
                 <div class="producto__informacion">
@@ -151,9 +153,10 @@
                 </div>
             </a>
         </div>  <!--.producto-->
-
+<!--   ***   elementos con un modificador      -->
         <div class="grafico grafico--camisas"></div>
         <div class="grafico grafico--node"></div>
+
     </div>
 </main>
 
